# l2mapconv-public

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
application/: CMakeLists.txt
application/install/: c1.bat  hf.bat
application/resources/geodata/: README.md
application/resources/shaders/: default.frag  default.vert  entity.frag  entity.vert  geodata.frag  geodata.geom  geodata.vert
application/src/: Application.cpp  Application.h  ApplicationContext.h  CameraSystem.cpp  CameraSystem.h  Conversion.h  Entity.h  GeodataLoader.cpp  GeodataLoader.h  LoadingSystem.cpp  LoadingSystem.h  Map.h  RenderingContext.h  RenderingSystem.cpp  RenderingSystem.h  System.h  Timestep.h  UIContext.h  UISystem.cpp  UISystem.h  UnrealLoader.cpp  UnrealLoader.h  WindowContext.h  WindowSystem.cpp  WindowSystem.h  main.cpp  pch.h
geodata/: CMakeLists.txt
geodata/include/geodata/: Entity.h  Geodata.h  Loader.h
geodata/src/: L2JSerializer.cpp  L2JSerializer.h  Loader.cpp  pch.h
libs/: CMakeLists.txt
libs/imgui/: CMakeLists.txt
libs/llvm/: CMakeLists.txt
libs/llvm/include/llvm/: Endian.h  SwapByteOrder.h
libs/stb/: CMakeLists.txt
math/: CMakeLists.txt
math/include/math/: Box.h  Frustum.h  Transformation.h
math/src/: Box.cpp  Frustum.cpp  Transformation.cpp
rendering/: CMakeLists.txt
rendering/include/rendering/: AttributeLayout.h  Camera.h  Context.h  DrawableMesh.h  Entity.h  EntityMesh.h  EntityRenderer.h  EntityShader.h  EntityTree.h  ErrorHandling.h  FrameSettings.h  GeodataBlock.h  GeodataMesh.h  Material.h  Mesh.h  MeshSurface.h  Renderer.h  Shader.h  ShaderLoader.h  Texture.h  TextureLoader.h  Vertex.h  VertexBuffer.h
rendering/src/: Camera.cpp  Entity.cpp  EntityMesh.cpp  EntityRenderer.cpp  EntityShader.cpp  EntityTree.cpp  GeodataMesh.cpp  Mesh.cpp  Renderer.cpp  Shader.cpp  ShaderLoader.cpp  Texture.cpp  TextureLoader.cpp  VertexBuffer.cpp  pch.h
unreal/: CMakeLists.txt
unreal/include/unreal/: Actor.h  Archive.h  ArchiveLoader.h  ArrayIndex.h  BSP.h  ExtractionHelpers.h  Index.h  Level.h  Material.h  Name.h  NameTable.h  Object.h  ObjectLoader.h  ObjectRef.h  Package.h  PackageLoader.h  Primitives.h  Property.h  PropertyExtractor.h  StaticMesh.h  Terrain.h
unreal/src/: Actor.cpp  Archive.cpp  ArchiveLoader.cpp  ArrayIndex.cpp  BSP.cpp  Debug.cpp  Decryptor.cpp  Decryptor.h  Level.cpp  Material.cpp  MaterialDeserializer.cpp  MaterialDeserializer.h  Object.cpp  ObjectLoader.cpp  PackageLoader.cpp  Primitives.cpp  Property.cpp  PropertyExtractor.cpp  StaticMesh.cpp  Terrain.cpp  main.cpp  pch.h
utils/: CMakeLists.txt
utils/include/utils/: Assert.h  Bitset.h  ExtractionHelpers.h  Log.h  NonCopyable.h  StreamDump.h  Timer.h
utils/src/: Bitset.cpp  Log.cpp  StreamDump.cpp
